SDC-500 - Fix tests on trunk after merge
Change-Id: I00b94ced50f821732099b1ed625d5a0f9a8c5157
Reviewed-on: https://review.streamsets.net/146
Tested-by: StreamSets CI <streamsets-ci-spam@streamsets.com>
Reviewed-by: Brock Noland <brock@streamsets.com>