@@ -93,6 +93,12 @@
       <version>1.0.0b2-SNAPSHOT</version> <!-- required since we are not supposed to do this -->
       <scope>test</scope> <!-- DO NOT CHANGE, tests which require this should be moved to integration tests -->
     </dependency>
+    <dependency>
+      <groupId>com.streamsets</groupId>
+      <artifactId>streamsets-datacollector-container-common</artifactId>
+      <version>1.0.0b2-SNAPSHOT</version> <!-- required since we are not supposed to do this -->
+      <scope>test</scope> <!-- DO NOT CHANGE, tests which require this should be moved to integration tests -->
+    </dependency>
 
     <dependency>
       <groupId>com.google.guava</groupId>
@@ -171,6 +177,14 @@
             <packageLineRate>98</packageLineRate>
             <packageBranchRate>98</packageBranchRate>
           </check>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.18.1</version>
+        <configuration>
+            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
         </configuration>
       </plugin>
       <plugin>
